exports[`trae -> defaults returns the current default config when no params are passed 1`] = `
Object {
  "headers": Object {},
}
`;

exports[`trae -> defaults sets the default config to be used on all requests for the instance 1`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {},
  "mode": "no-cors",
}
`;
